--- a/main.html
+++ b/main.html
@@ -7,10 +7,20 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Roll Number</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td> 100</td>
+				<td>200</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
