--- a/main.html
+++ b/main.html
@@ -16,8 +16,12 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td> 100</td>
+				<td>john</td>
 				<td>200</td>
+			</tr>
+			<tr>
+				<td>doe</td>
+				<td>100</td>
 			</tr>
 		</tbody>
 	</table>
